# nordify

./: README.md  main.py  pyproject.toml  test.py
.github/workflows/: ci.yml
